--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "composer/installers": "1.2.*",
-        "timber/timber": "^1.3"
+        "timber/timber": "^1.3",
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "extra": {
         "installer-name": "asse-http"
