--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,47 @@
         "plugin",
         "http"
     ],
+    "config": {
+      "preferred-install": "dist",
+      "optimize-autoloader": true,
+      "secure-http": true
+    },
+    "repositories": [
+    {
+      "type": "composer",
+      "url": "https://toran-proxy.asit.services/repo/private/",
+      "options": {
+        "ssl": {
+          "verify_peer": false,
+          "verify_peer_name": false,
+          "allow_self_signed": true
+        }
+      }
+    },
+    {
+      "type": "composer",
+      "url": "https://toran-proxy.asit.services/repo/packagist/",
+      "options": {
+        "ssl": {
+          "verify_peer": false,
+          "verify_peer_name": false,
+          "allow_self_signed": true
+        }
+      }
+    },
+    {"packagist": false}
+    ],
+    "autoload": {
+        "psr-4" : {
+            "Asse\\" : "src/"
+        }
+    },
     "homepage": "https://as-stash.axelspringer.de/projects/WPPL/repos/asse-http",
     "license": "proprietary",
     "authors": [
     ],
     "require": {
         "composer/installers": "1.2.*",
-        "timber/timber": "^1.3",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "extra": {
